--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@cbb/data-access-cdk": "^0.2.0-alpha.20",
     "core-js": "^3.6.4",
+    "unocss": "^0.45.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@unocss/webpack": "^0.51.12",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.63.6",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
